@@ -1,20 +1,9 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.search.profile;
@@ -30,8 +19,8 @@ import org.elasticsearch.test.ESTestCase;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
@@ -46,22 +35,27 @@ public class ProfileResultTests extends ESTestCase {
     public static ProfileResult createTestItem(int depth) {
         String type = randomAlphaOfLengthBetween(5, 10);
         String description = randomAlphaOfLengthBetween(5, 10);
-        int timingsSize = randomIntBetween(0, 5);
-        Map<String, Long> timings = new HashMap<>(timingsSize);
-        for (int i = 0; i < timingsSize; i++) {
-            long time = randomNonNegativeLong() / timingsSize;
+        int breakdownsSize = randomIntBetween(0, 5);
+        Map<String, Long> breakdown = new HashMap<>(breakdownsSize);
+        while (breakdown.size() < breakdownsSize) {
+            long value = randomNonNegativeLong();
             if (randomBoolean()) {
                 // also often use "small" values in tests
-                time = randomNonNegativeLong() % 10000;
+                value = value % 10000;
             }
-            timings.put(randomAlphaOfLengthBetween(5, 10), time); // don't overflow Long.MAX_VALUE;
+            breakdown.put(randomAlphaOfLengthBetween(5, 10), value);
+        }
+        int debugSize = randomIntBetween(0, 5);
+        Map<String, Object> debug = new HashMap<>(debugSize);
+        while (debug.size() < debugSize) {
+            debug.put(randomAlphaOfLength(5), randomAlphaOfLength(4));
         }
         int childrenSize = depth > 0 ? randomIntBetween(0, 1) : 0;
         List<ProfileResult> children = new ArrayList<>(childrenSize);
         for (int i = 0; i < childrenSize; i++) {
             children.add(createTestItem(depth - 1));
         }
-        return new ProfileResult(type, description, timings, children);
+        return new ProfileResult(type, description, breakdown, debug, randomNonNegativeLong(), children);
     }
 
     public void testFromXContent() throws IOException {
@@ -83,15 +77,16 @@ public class ProfileResultTests extends ESTestCase {
         BytesReference originalBytes = toShuffledXContent(profileResult, xContentType, ToXContent.EMPTY_PARAMS, humanReadable);
         BytesReference mutated;
         if (addRandomFields) {
-            // "breakdown" just consists of key/value pairs, we shouldn't add anything random there
-            Predicate<String> excludeFilter = (s) -> s.endsWith(ProfileResult.BREAKDOWN.getPreferredName());
+            // "breakdown" and "debug" just consists of key/value pairs, we shouldn't add anything random there
+            Predicate<String> excludeFilter = (s) ->
+                s.endsWith(ProfileResult.BREAKDOWN.getPreferredName()) || s.endsWith(ProfileResult.DEBUG.getPreferredName());
             mutated = insertRandomFields(xContentType, originalBytes, excludeFilter, random());
         } else {
             mutated = originalBytes;
         }
         ProfileResult parsed;
         try (XContentParser parser = createParser(xContentType.xContent(), mutated)) {
-            ensureExpectedToken(XContentParser.Token.START_OBJECT, parser.nextToken(), parser::getTokenLocation);
+            ensureExpectedToken(XContentParser.Token.START_OBJECT, parser.nextToken(), parser);
             parsed = ProfileResult.fromXContent(parser);
             assertEquals(XContentParser.Token.END_OBJECT, parser.currentToken());
             assertNull(parser.nextToken());
@@ -102,12 +97,15 @@ public class ProfileResultTests extends ESTestCase {
 
     public void testToXContent() throws IOException {
         List<ProfileResult> children = new ArrayList<>();
-        children.add(new ProfileResult("child1", "desc1", Collections.singletonMap("key1", 100L), Collections.emptyList()));
-        children.add(new ProfileResult("child2", "desc2", Collections.singletonMap("key1", 123356L), Collections.emptyList()));
-        Map<String, Long> timings3 = new HashMap<>();
-        timings3.put("key1", 123456L);
-        timings3.put("key2", 100000L);
-        ProfileResult result = new ProfileResult("someType", "some description", timings3, children);
+        children.add(new ProfileResult("child1", "desc1", Map.of("key1", 100L), Map.of(), 100L, List.of()));
+        children.add(new ProfileResult("child2", "desc2", Map.of("key1", 123356L), Map.of(), 123356L, List.of()));
+        Map<String, Long> breakdown = new LinkedHashMap<>();
+        breakdown.put("key1", 123456L);
+        breakdown.put("stuff", 10000L);
+        Map<String, Object> debug = new LinkedHashMap<>();
+        debug.put("a", "foo");
+        debug.put("b", "bar");
+        ProfileResult result = new ProfileResult("someType", "some description", breakdown, debug, 223456L, children);
         XContentBuilder builder = XContentFactory.jsonBuilder().prettyPrint();
         result.toXContent(builder, ToXContent.EMPTY_PARAMS);
         assertEquals("{\n" +
@@ -116,7 +114,11 @@ public class ProfileResultTests extends ESTestCase {
                 "  \"time_in_nanos\" : 223456,\n" +
                 "  \"breakdown\" : {\n" +
                 "    \"key1\" : 123456,\n" +
-                "    \"key2\" : 100000\n" +
+                "    \"stuff\" : 10000\n" +
+                "  },\n" +
+                "  \"debug\" : {\n" +
+                "    \"a\" : \"foo\",\n" +
+                "    \"b\" : \"bar\"\n" +
                 "  },\n" +
                 "  \"children\" : [\n" +
                 "    {\n" +
@@ -147,7 +149,11 @@ public class ProfileResultTests extends ESTestCase {
                 "  \"time_in_nanos\" : 223456,\n" +
                 "  \"breakdown\" : {\n" +
                 "    \"key1\" : 123456,\n" +
-                "    \"key2\" : 100000\n" +
+                "    \"stuff\" : 10000\n" +
+                "  },\n" +
+                "  \"debug\" : {\n" +
+                "    \"a\" : \"foo\",\n" +
+                "    \"b\" : \"bar\"\n" +
                 "  },\n" +
                 "  \"children\" : [\n" +
                 "    {\n" +
@@ -171,7 +177,7 @@ public class ProfileResultTests extends ESTestCase {
                 "  ]\n" +
           "}", Strings.toString(builder));
 
-        result = new ProfileResult("profileName", "some description", Collections.singletonMap("key1", 12345678L), Collections.emptyList());
+        result = new ProfileResult("profileName", "some description", Map.of("key1", 12345678L), Map.of(), 12345678L, List.of());
         builder = XContentFactory.jsonBuilder().prettyPrint().humanReadable(true);
         result.toXContent(builder, ToXContent.EMPTY_PARAMS);
         assertEquals("{\n" +
@@ -184,8 +190,7 @@ public class ProfileResultTests extends ESTestCase {
                 "  }\n" +
               "}", Strings.toString(builder));
 
-        result = new ProfileResult("profileName", "some description", Collections.singletonMap("key1", 1234567890L),
-                Collections.emptyList());
+        result = new ProfileResult("profileName", "some description", Map.of("key1", 1234567890L), Map.of(), 1234567890L, List.of());
         builder = XContentFactory.jsonBuilder().prettyPrint().humanReadable(true);
         result.toXContent(builder, ToXContent.EMPTY_PARAMS);
         assertEquals("{\n" +
